--- a/eyewrite.html
+++ b/eyewrite.html
@@ -386,6 +386,7 @@
       // document.getElementById("gazeVisSwitch").checked = false;
     }
     var experiment = "";
+    var apache = new Image();
   </script>
 </body>
 
