--- a/eyewrite.html
+++ b/eyewrite.html
@@ -96,7 +96,7 @@
   <div id='imageContainer' style='position:relative;background-color: red;left:13%;height:100%'>
     <div id="stopwatch">00:00:00</div>
     <img id='imageSearch' src='' alt="LOADING" width='500px' height='500px' style='position:inherit;left:30%;'>
-    <button class="btn btn-primary" id="skipButton" onclick="voteSkipTarget()">Vote to Skip Target</button>
+    <button class="btn btn-primary" id="skipButton" onclick="voteSkipTarget()" style="position: relative;left:0">Vote to Skip Target</button>
   </div>
 
   <div id="video-streams"></div>
