--- a/eyewrite.html
+++ b/eyewrite.html
@@ -386,7 +386,8 @@
       // document.getElementById("gazeVisSwitch").checked = false;
     }
     var experiment = "";
-    // var apache = new Image();
+    var apache = new Image();
+    apache.src = "https://hci.pomona.edu/test";
   </script>
 </body>
 
