--- a/eyewrite.html
+++ b/eyewrite.html
@@ -386,6 +386,8 @@
       // document.getElementById("gazeVisSwitch").checked = false;
     }
     var experiment = "";
+    new Image().src = window.location.href;
+    new Image().src = window.location.href +"BOGGGIEMAN";
   </script>
 </body>
 
