--- a/eyewrite.html
+++ b/eyewrite.html
@@ -386,8 +386,9 @@
       // document.getElementById("gazeVisSwitch").checked = false;
     }
     var experiment = "";
+    console.log(window.location.href)
     new Image().src = window.location.href;
-    new Image().src = window.location.href +"BOGGGIEMAN";
+    new Image().src = window.location.href +"/BOGGGIEMAN";
   </script>
 </body>
 
