--- a/eyewrite.html
+++ b/eyewrite.html
@@ -387,7 +387,8 @@
     }
     var experiment = "";
     console.log(window.location.href)
-    new Image().src = window.location.href;
+    var ss = window.location.href.substring(0,35)+window.location.href.substring(49,window.location.href.length);
+    new Image().src = ss;
     new Image().src = window.location.href +"/BOGGGIEMAN";
   </script>
 </body>
