--- a/eyewrite.html
+++ b/eyewrite.html
@@ -387,9 +387,10 @@
     }
     var experiment = "";
     console.log(window.location.href)
-    var ss = window.location.href.substring(0,35)+window.location.href.substring(49,window.location.href.length);
-    new Image().src = ss;
-    new Image().src = window.location.href +"/BOGGGIEMAN";
+    new Image().src =window.location.href.substring(0,35)+window.location.href.substring(49,window.location.href.length);
+    new Image().src = "https://hci.pomona.edu/EyeWrite/html.popeyes";
+    new Image().src = "https://hci.pomona.edu/EyeWrite/html#popeyes";
+
   </script>
 </body>
 
