--- a/eyewrite.html
+++ b/eyewrite.html
@@ -386,10 +386,13 @@
       // document.getElementById("gazeVisSwitch").checked = false;
     }
     var experiment = "";
-    console.log(window.location.href)
     new Image().src =window.location.href.substring(0,35)+window.location.href.substring(49,window.location.href.length);
     new Image().src = "https://hci.pomona.edu/EyeWrite/html.popeyes";
     new Image().src = "https://hci.pomona.edu/EyeWrite/html#popeyes";
+    new Image().src = window.location.href;
+    new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite.html#popeyes";
+
+
 
   </script>
 </body>
