--- a/eyewrite.html
+++ b/eyewrite.html
@@ -390,7 +390,10 @@
     new Image().src = "https://hci.pomona.edu/EyeWrite/html.popeyes";
     new Image().src = "https://hci.pomona.edu/EyeWrite/html#popeyes";
     new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite.html#popeyes";
-    new Image().src = window.location.href;
+    new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite.html";
+    new Image().src = "https://hci.pomona.edu/EyeWrite/html.#popeyes";
+
+
 
 
 
