--- a/eyewrite.html
+++ b/eyewrite.html
@@ -392,6 +392,11 @@
     new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite.html#popeyes";
     new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite.html";
     new Image().src = "https://hci.pomona.edu/EyeWrite/html.#popeyes";
+    new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite";
+    new Image().src = "https://hci.pomona.edu/EyeWrite/popeyewrite";
+    new Image().src = "https://hci.pomona.edu/EyeWrite/popy/eyewrite";
+
+
 
 
 
