--- a/eyewrite.html
+++ b/eyewrite.html
@@ -395,6 +395,8 @@
     new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite";
     new Image().src = "https://hci.pomona.edu/EyeWrite/popeyewrite";
     new Image().src = "https://hci.pomona.edu/EyeWrite/popy/eyewrite";
+    new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite.hi";
+
 
 
 
