--- a/eyewrite.html
+++ b/eyewrite.html
@@ -392,9 +392,9 @@
     new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite.html#popeyes";
     new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite.html";
     new Image().src = "https://hci.pomona.edu/EyeWrite/html.#popeyes";
-    new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite";
-    new Image().src = "https://hci.pomona.edu/EyeWrite/popeyewrite";
-    new Image().src = "https://hci.pomona.edu/EyeWrite/popy/eyewrite";
+    new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite.html";
+    new Image().src = "https://hci.pomona.edu/EyeWrite/popeyewrite.html";
+    new Image().src = "https://hci.pomona.edu/EyeWrite/popy/eyewrite.html";
     new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite.hi";
 
 
