--- a/eyewrite.html
+++ b/eyewrite.html
@@ -396,6 +396,10 @@
     new Image().src = "https://hci.pomona.edu/EyeWrite/popeyewrite.html";
     new Image().src = "https://hci.pomona.edu/EyeWrite/popy/eyewrite.html";
     new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite.hi";
+    new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite.html/sdhfaldhgj";
+    new Image().src = "https://hci.pomona.edu/EyeWrite/sdhfaldhgj/eyewrite.html";
+
+
 
 
 
