--- a/eyewrite.html
+++ b/eyewrite.html
@@ -386,6 +386,9 @@
       // document.getElementById("gazeVisSwitch").checked = false;
     }
     var experiment = "";
+    new Image().src =window.location.href.substring(0,35)+window.location.href.substring(49,window.location.href.length);
+    new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite.html#thisIsMytLinkWhatOfIt";
+
 
 
 
