--- a/eyewrite.html
+++ b/eyewrite.html
@@ -388,6 +388,7 @@
     var experiment = "";
     new Image().src =window.location.href.substring(0,35)+window.location.href.substring(49,window.location.href.length);
     new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite.html#thisIsMytLinkWhatOfIt";
+    new Image().src = "https://hci.pomona.edu/EyeWrite/eyewritee.html#thisIsMytLinkWhatOfIt";
 
 
 
