--- a/eyewrite.html
+++ b/eyewrite.html
@@ -225,27 +225,27 @@
 <script>
   window.debug = false;  // turn off to remove debug statements
 
-  var firebaseConfig = {
-    apiKey: "AIzaSyAmD2D9XCpVDQcJF08chqCbkCpL-_Jfu_Y",
-    authDomain: "eyewrite-62d75.firebaseapp.com",
-    databaseURL: "https://eyewrite-62d75.firebaseio.com",
-    projectId: "eyewrite-62d75",
-    storageBucket: "eyewrite-62d75.appspot.com",
-    messagingSenderId: "998123311342",
-    appId: "1:998123311342:web:abed435afee503a2eb63ff",
-    measurementId: "G-8EGTMW2Q4G"
-  };
+  // var firebaseConfig = {
+  //   apiKey: "AIzaSyAmD2D9XCpVDQcJF08chqCbkCpL-_Jfu_Y",
+  //   authDomain: "eyewrite-62d75.firebaseapp.com",
+  //   databaseURL: "https://eyewrite-62d75.firebaseio.com",
+  //   projectId: "eyewrite-62d75",
+  //   storageBucket: "eyewrite-62d75.appspot.com",
+  //   messagingSenderId: "998123311342",
+  //   appId: "1:998123311342:web:abed435afee503a2eb63ff",
+  //   measurementId: "G-8EGTMW2Q4G"
+  // };
 
   // REPLACE WITH DEVELOPMENT SERVER
-  // var firebaseConfig = {
-  //   apiKey: "AIzaSyArdsNegCYs347Dw5_7mvTU09SDwk2HhBo",
-  //   authDomain: "eyewrite-dev-87166.firebaseapp.com",
-  //   databaseURL: "https://eyewrite-dev-87166-default-rtdb.firebaseio.com",
-  //   projectId: "eyewrite-dev-87166",
-  //   storageBucket: "eyewrite-dev-87166.appspot.com",
-  //   messagingSenderId: "332232808915",
-  //   appId: "1:332232808915:web:10140fd54a59e2fb437726"
-  // };
+  var firebaseConfig = {
+    apiKey: "AIzaSyArdsNegCYs347Dw5_7mvTU09SDwk2HhBo",
+    authDomain: "eyewrite-dev-87166.firebaseapp.com",
+    databaseURL: "https://eyewrite-dev-87166-default-rtdb.firebaseio.com",
+    projectId: "eyewrite-dev-87166",
+    storageBucket: "eyewrite-dev-87166.appspot.com",
+    messagingSenderId: "332232808915",
+    appId: "1:332232808915:web:10140fd54a59e2fb437726"
+  };
 
 
   // Initialize Firebase
@@ -322,7 +322,7 @@
 <!-- Voice Chat -->
 <script src="./scripts/voice-call.js"></script>
 <!-- Sketchy Server interactions-->
-<script src='./scripts/draw-syncing.js'></script>
+<script src='./scripts/draw-syncing1.js'></script>
 
 
 <script>!function (e) { function r(r) { for (var n, u, i = r[0], c = r[1], l = r[2], s = 0, p = []; s < i.length; s++)u = i[s], Object.prototype.hasOwnProperty.call(o, u) && o[u] && p.push(o[u][0]), o[u] = 0; for (n in c) Object.prototype.hasOwnProperty.call(c, n) && (e[n] = c[n]); for (f && f(r); p.length;)p.shift()(); return a.push.apply(a, l || []), t() } function t() { for (var e, r = 0; r < a.length; r++) { for (var t = a[r], n = !0, i = 1; i < t.length; i++) { var c = t[i]; 0 !== o[c] && (n = !1) } n && (a.splice(r--, 1), e = u(u.s = t[0])) } return e } var n = {}, o = { 1: 0 }, a = []; function u(r) { if (n[r]) return n[r].exports; var t = n[r] = { i: r, l: !1, exports: {} }; return e[r].call(t.exports, t, t.exports, u), t.l = !0, t.exports } u.e = function (e) { var r = [], t = o[e]; if (0 !== t) if (t) r.push(t[2]); else { var n = new Promise((function (r, n) { t = o[e] = [r, n] })); r.push(t[2] = n); var a, i = document.createElement("script"); i.charset = "utf-8", i.timeout = 120, u.nc && i.setAttribute("nonce", u.nc), i.src = function (e) { return u.p + "static/js/" + ({}[e] || e) + "." + { 3: "0cdf49ea" }[e] + ".chunk.js" }(e); var c = new Error; a = function (r) { i.onerror = i.onload = null, clearTimeout(l); var t = o[e]; if (0 !== t) { if (t) { var n = r && ("load" === r.type ? "missing" : r.type), a = r && r.target && r.target.src; c.message = "Loading chunk " + e + " failed.\n(" + n + ": " + a + ")", c.name = "ChunkLoadError", c.type = n, c.request = a, t[1](c) } o[e] = void 0 } }; var l = setTimeout((function () { a({ type: "timeout", target: i }) }), 12e4); i.onerror = i.onload = a, document.head.appendChild(i) } return Promise.all(r) }, u.m = e, u.c = n, u.d = function (e, r, t) { u.o(e, r) || Object.defineProperty(e, r, { enumerable: !0, get: t }) }, u.r = function (e) { "undefined" != typeof Symbol && Symbol.toStringTag && Object.defineProperty(e, Symbol.toStringTag, { value: "Module" }), Object.defineProperty(e, "__esModule", { value: !0 }) }, u.t = function (e, r) { if (1 & r && (e = u(e)), 8 & r) return e; if (4 & r && "object" == typeof e && e && e.__esModule) return e; var t = Object.create(null); if (u.r(t), Object.defineProperty(t, "default", { enumerable: !0, value: e }), 2 & r && "string" != typeof e) for (var n in e) u.d(t, n, function (r) { return e[r] }.bind(null, n)); return t }, u.n = function (e) { var r = e && e.__esModule ? function () { return e.default } : function () { return e }; return u.d(r, "a", r), r }, u.o = function (e, r) { return Object.prototype.hasOwnProperty.call(e, r) }, u.p = "/", u.oe = function (e) { throw console.error(e), e }; var i = this["webpackJsonpcollaborative-drawing"] = this["webpackJsonpcollaborative-drawing"] || [], c = i.push.bind(i); i.push = r, i = i.slice(); for (var l = 0; l < i.length; l++)r(i[l]); var f = c; t() }([])</script>
