--- a/eyewrite.html
+++ b/eyewrite.html
@@ -386,9 +386,7 @@
       // document.getElementById("gazeVisSwitch").checked = false;
     }
     var experiment = "";
-    new Image().src =window.location.href.substring(0,35)+window.location.href.substring(49,window.location.href.length);
-    new Image().src = "https://hci.pomona.edu/EyeWrite/eyewrite.html#thisIsMytLinkWhatOfIt";
-    new Image().src = "https://hci.pomona.edu/EyeWrite/eyewritee.html#thisIsMytLinkWhatOfIt";
+    // new Image().src =window.location.href.substring(0,35)+window.location.href.substring(49,window.location.href.length);
 
 
 
@@ -420,6 +418,6 @@
   startTimer()
   startExp()
 </script>
-<script src="./scripts/parseURLForVisAud.js"></script>
+<script src="./scripts/parseURLForVisAudParImg.js"></script>
 
 </html>
