--- a/eyewrite.html
+++ b/eyewrite.html
@@ -415,7 +415,7 @@
 <script src="./scripts/stopwatch.js"></script>
 <script src="./scripts/imageSelect.js"></script>
 <script>
-  startTimer()
+  startStopwatch()
   startExp()
 </script>
 <script src="./scripts/parseURLForVisAudParImg.js"></script>
