--- a/eyewrite.html
+++ b/eyewrite.html
@@ -93,10 +93,16 @@
   <div id="firepad" style='visibility:hidden'></div>
 
 
-  <div id='imageContainer' style='position:relative;background-color: red;left:13%;height:100%'>
+  <div id='imageContainer' style='position:relative;background-color: grey;left:13%;height:100%'>
     <div id="stopwatch">00:00:00</div>
-    <img id='imageSearch' src='' alt="LOADING" width='500px' height='500px' style='position:inherit;left:30%;'>
-    <button class="btn btn-primary" id="skipButton" onclick="voteSkipTarget()" style="position: relative;left:0">Vote to Skip Target</button>
+    <div style='position: relative;top:50%;height:200px'>
+      <img id='targetSearch' src='./graphics/targetbase.png' alt='TARGET' width='100px' height='100px'
+        style='position:absolute;left:12%'>
+      <button class="btn btn-primary" id="skipButton" onclick="voteSkipTarget()" style="position:absolute;top:60%;left:10%">Vote
+        to Skip Target</button>
+    </div>
+    <img id='imageSearch' src='' alt="IMAGE" width='500px' height='500px' style='position:absolute;left:30%;top:10%'>
+
   </div>
 
   <div id="video-streams"></div>
@@ -304,27 +310,27 @@
   <script>
     window.debug = false; // turn off to remove debug statements
 
-    var firebaseConfig = {
-      apiKey: "AIzaSyAmD2D9XCpVDQcJF08chqCbkCpL-_Jfu_Y",
-      authDomain: "eyewrite-62d75.firebaseapp.com",
-      databaseURL: "https://eyewrite-62d75.firebaseio.com",
-      projectId: "eyewrite-62d75",
-      storageBucket: "eyewrite-62d75.appspot.com",
-      messagingSenderId: "998123311342",
-      appId: "1:998123311342:web:abed435afee503a2eb63ff",
-      measurementId: "G-8EGTMW2Q4G",
-    };
+    // var firebaseConfig = {
+    //   apiKey: "AIzaSyAmD2D9XCpVDQcJF08chqCbkCpL-_Jfu_Y",
+    //   authDomain: "eyewrite-62d75.firebaseapp.com",
+    //   databaseURL: "https://eyewrite-62d75.firebaseio.com",
+    //   projectId: "eyewrite-62d75",
+    //   storageBucket: "eyewrite-62d75.appspot.com",
+    //   messagingSenderId: "998123311342",
+    //   appId: "1:998123311342:web:abed435afee503a2eb63ff",
+    //   measurementId: "G-8EGTMW2Q4G",
+    // };
 
     // REPLACE WITH DEVELOPMENT SERVER
-    // var firebaseConfig = {
-    //   apiKey: "AIzaSyAkIIeqpNNzGp98UHRI21GOvp6CmH_hdZU",
-    //   authDomain: "eyewrite2-642f5.firebaseapp.com",
-    //   databaseURL: "https://eyewrite2-642f5-default-rtdb.firebaseio.com",
-    //   projectId: "eyewrite2-642f5",
-    //   storageBucket: "eyewrite2-642f5.appspot.com",
-    //   messagingSenderId: "360420484918",
-    //   appId: "1:360420484918:web:df36b1d345145448f7b597"
-    // };
+    var firebaseConfig = {
+      apiKey: "AIzaSyArdsNegCYs347Dw5_7mvTU09SDwk2HhBo",
+      authDomain: "eyewrite-dev-87166.firebaseapp.com",
+      databaseURL: "https://eyewrite-dev-87166-default-rtdb.firebaseio.com",
+      projectId: "eyewrite-dev-87166",
+      storageBucket: "eyewrite-dev-87166.appspot.com",
+      messagingSenderId: "332232808915",
+      appId: "1:332232808915:web:10140fd54a59e2fb437726"
+    };
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
