final boxes/images

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -101,7 +101,7 @@
       <button class="btn btn-primary" id="skipButton" onclick="voteSkipTarget()" style="position:absolute;top:60%;left:10%">Vote
         to Skip Target</button>
     </div>
-    <img id='imageSearch' src='' alt="IMAGE" width='500px' height='500px' style='position:absolute;left:30%;top:10%'>
+    <img id='imageSearch' src='' alt="IMAGE" width='50%' height='100%' style='position:absolute;left:30%;top:0%'>
 
   </div>
 
