--- a/eyewrite.html
+++ b/eyewrite.html
@@ -216,7 +216,7 @@
   <div id="audio-streams"></div>
 
   <div id="root" style="position:relative;bottom:65%;height:100%"></div>
-  <button id='uibutton' class="btn btn-primary" style="position: relative;bottom:164%;left:90%;"
+  <button id='uibutton' class="btn btn-primary" style="position: relative;bottom:164%;left:90%;z-index: 5;"
     onclick="toggleUI()">Users</button>
   <div id='promptLabel' style='position: relative;bottom:169%;left:35%;'>Draw This: <span
       style='color:red;font-size:20px;font-weight: bold;' id=drawingPrompt></span></div>
