incorrect click counter

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -95,6 +95,7 @@
 
   <div id='imageContainer' style='position:relative;background-color: grey;left:13%;height:100%'>
     <div id="stopwatch">00:00:00</div>
+    <div id='incorrectCounter'>Incorrect Clicks: <span id='badclicks'></span></div>
     <div style='position: relative;top:50%;height:200px'>
       <img id='targetSearch' src='./graphics/targetbase.png' alt='TARGET' width='100px' height='100px'
         style='position:absolute;left:12%'>
