--- a/eyewrite.html
+++ b/eyewrite.html
@@ -92,18 +92,8 @@
 
   <div id="firepad" style='visibility:hidden'></div>
 
-
   <div id='imageContainer' style='position:relative;background-color: grey;left:13%;height:100%'>
-    <div id="stopwatch">00:00:00</div>
-    <div id='incorrectCounter'>Incorrect Clicks: <span id='badclicks'></span></div>
-    <div style='position: relative;top:50%;height:200px'>
-      <img id='targetSearch' src='./graphics/targetbase.png' alt='TARGET' width='100px' height='100px'
-        style='position:absolute;left:12%'>
-      <button class="btn btn-primary" id="skipButton" onclick="voteSkipTarget()" style="position:absolute;top:60%;left:10%">Vote
-        to Skip Target</button>
-    </div>
     <img id='imageSearch' src='' alt="IMAGE" width='50%' height='100%' style='position:absolute;left:30%;top:0%'>
-
   </div>
 
   <div id="video-streams"></div>
@@ -112,7 +102,26 @@
 
   <div id="heatmap"></div>
 
-  <div id="controlContainer">
+  <div id="imageSearchUI" style="background-color: #ebebeb;
+  width: 175px;
+  position: absolute;
+  border-radius: 4px;
+  padding-bottom: 12px;
+  height: auto;
+  max-height: 65vh;
+  overflow-y: scroll;">
+    <div id="stopwatch">00:00:00</div>
+    <div id='incorrectCounter'>Incorrect Clicks: <span id='badclicks'></span></div>
+    <div style='position: relative;top:50%;height:200px'>
+      <img id='targetSearch' src='./graphics/targetbase.png' alt='TARGET' width='100px' height='100px'
+        style='position:absolute;left:12%'>
+      <button class="btn btn-primary" id="skipButton" onclick="voteSkipTarget()"
+        style="position:absolute;top:60%;left:10%">Vote
+        to Skip Target</button>
+    </div>
+  </div>
+
+  <div id="controlContainer" style="visibility: hidden;">
     <div id="user-checkboxes-container"></div>
     <select id="user-checkboxes" multiple="multiple"></select>
 
