--- a/eyewrite.html
+++ b/eyewrite.html
@@ -115,6 +115,8 @@
     <img id='targetSearch' src='' alt='TARGET' width='100px' height='100px'
       style='position:absolute;left:20%;bottom:35%'>
     <button class="btn btn-primary" id="skipButton" onclick="voteSkipTarget()" style="position:absolute;bottom:5%;left:15%">Skip Target</button>
+    <!-- <button class="btn btn-primary" id="skip1Button" onclick="nextTarget()" style="position:absolute;bottom:5%;left:15%">Skip Target</button> -->
+
   </div>
 
   <div id="controlContainer" style="visibility: hidden;">
