--- a/eyewrite.html
+++ b/eyewrite.html
@@ -228,27 +228,27 @@
 <script>
   window.debug = false;  // turn off to remove debug statements
 
-  // var firebaseConfig = {
-  //   apiKey: "AIzaSyAmD2D9XCpVDQcJF08chqCbkCpL-_Jfu_Y",
-  //   authDomain: "eyewrite-62d75.firebaseapp.com",
-  //   databaseURL: "https://eyewrite-62d75.firebaseio.com",
-  //   projectId: "eyewrite-62d75",
-  //   storageBucket: "eyewrite-62d75.appspot.com",
-  //   messagingSenderId: "998123311342",
-  //   appId: "1:998123311342:web:abed435afee503a2eb63ff",
-  //   measurementId: "G-8EGTMW2Q4G"
-  // };
+  var firebaseConfig = {
+    apiKey: "AIzaSyAmD2D9XCpVDQcJF08chqCbkCpL-_Jfu_Y",
+    authDomain: "eyewrite-62d75.firebaseapp.com",
+    databaseURL: "https://eyewrite-62d75.firebaseio.com",
+    projectId: "eyewrite-62d75",
+    storageBucket: "eyewrite-62d75.appspot.com",
+    messagingSenderId: "998123311342",
+    appId: "1:998123311342:web:abed435afee503a2eb63ff",
+    measurementId: "G-8EGTMW2Q4G"
+  };
 
   // REPLACE WITH DEVELOPMENT SERVER
-  var firebaseConfig = {
-    apiKey: "AIzaSyArdsNegCYs347Dw5_7mvTU09SDwk2HhBo",
-    authDomain: "eyewrite-dev-87166.firebaseapp.com",
-    databaseURL: "https://eyewrite-dev-87166-default-rtdb.firebaseio.com",
-    projectId: "eyewrite-dev-87166",
-    storageBucket: "eyewrite-dev-87166.appspot.com",
-    messagingSenderId: "332232808915",
-    appId: "1:332232808915:web:10140fd54a59e2fb437726"
-  };
+  // var firebaseConfig = {
+  //   apiKey: "AIzaSyArdsNegCYs347Dw5_7mvTU09SDwk2HhBo",
+  //   authDomain: "eyewrite-dev-87166.firebaseapp.com",
+  //   databaseURL: "https://eyewrite-dev-87166-default-rtdb.firebaseio.com",
+  //   projectId: "eyewrite-dev-87166",
+  //   storageBucket: "eyewrite-dev-87166.appspot.com",
+  //   messagingSenderId: "332232808915",
+  //   appId: "1:332232808915:web:10140fd54a59e2fb437726"
+  // };
 
 
   // Initialize Firebase
