filling up .txts

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -412,9 +412,9 @@
 
 
 
-
   </script>
 </body>
+<script src="./scripts/downloadData.js"></script>
 
 <!-- Highlight Style -->
 <script src="./scripts/highlight-styles.js"></script>
@@ -427,7 +427,9 @@
 <!-- <script src="./scripts/media-call.js"></script> -->
 
 <script src="./scripts/stopwatch.js"></script>
-<script src="./scripts/imageSelect.js"></script>
 <script src="./scripts/parseURLForVisAudParImgRad.js"></script>
+<script src="./scripts/imageSelect.js"></script>
+
+
 
 </html>
