implement tobii integration?

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -29,7 +29,10 @@
 
   <!-- WebGazer -->
   <!-- <script type='text/javascript' src='./WebGazer/www/simple-wg/webgazer.js'></script> -->
-  <script type="text/javascript" src="./WebGazer/simple-wg/webgazer.js"></script>
+  <!-- <script type="text/javascript" src="./WebGazer/simple-wg/webgazer.js"></script> -->
+
+  <!-- Tobii -->
+  <script type="text/javascript" src ="./scripts/tobii.js"></script>
 
   <!-- Peer.JS -->
   <script src="./node_modules/peerjs/dist/peerjs.js"></script>
@@ -310,9 +313,9 @@
     </div>
 
     <!-- WebGazer Calibration Component -->
-    <a href="./WebGazer/simple-wg/index.html" id="calibrationLink">
-      <input type="button" id="calibrationButton" value="Calibrate Gaze" />
-    </a>
+    <!-- <a href="./WebGazer/simple-wg/index.html" id="calibrationLink">
+         <input type="button" id="calibrationButton" value="Calibrate Gaze" />
+         </a> -->
   </div>
 
   <div id="audio-streams"></div>
