--- a/eyewrite.html
+++ b/eyewrite.html
@@ -157,7 +157,7 @@
                 margin-bottom: 10px;
                 margin-top: 0px;
               ">
-          <!-- <option value="solid">Solid</option> -->
+          <option value="solid">Solid</option>
           <option value="gradient">Gradient</option>
           <option value="heatmap">Heatmap</option>
           <option value="hollow">Hollow</option>
