add require and socket

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -31,8 +31,11 @@
   <!-- <script type='text/javascript' src='./WebGazer/www/simple-wg/webgazer.js'></script> -->
   <!-- <script type="text/javascript" src="./WebGazer/simple-wg/webgazer.js"></script> -->
 
+  <!--Require.js: needed for tobii.js-->
+  <script type="text/javascript" src="./scripts/require.js"></script>
+
   <!-- Tobii -->
-  <script type="text/javascript" src ="./scripts/tobii.js"></script>
+  <script type="text/javascript" src="./scripts/tobii.js"></script>
 
   <!-- Peer.JS -->
   <script src="./node_modules/peerjs/dist/peerjs.js"></script>
