--- a/eyewrite.html
+++ b/eyewrite.html
@@ -31,9 +31,6 @@
   <!-- <script type='text/javascript' src='./WebGazer/www/simple-wg/webgazer.js'></script> -->
   <!-- <script type="text/javascript" src="./WebGazer/simple-wg/webgazer.js"></script> -->
 
-  <!-- Tobii -->
-  <script type="text/javascript" src="./scripts/bundle.js"></script>
-
   <!-- Peer.JS -->
   <script src="./node_modules/peerjs/dist/peerjs.js"></script>
 
@@ -88,9 +85,15 @@
         top: 425px; */
       }
     </style> -->
+
+  <!--Socket.io stuff-->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
+  <script type="text/javascript" src="/socket.io-stream.js"></script>
 </head>
 
 <body onload="updateUI()">
+    <!-- Tobii, bundled by browserify -->
+  <script type="text/javascript" src="scripts/bundle.js"></script>
   <div id="userlist"></div>
 
   <div id="firepad" style='visibility:hidden'></div>
@@ -366,6 +369,9 @@
 
     // Create a random ID to use as our user ID (we must give this to firepad and FirepadUserList).
     var userId = Math.floor(Math.random() * 9999999999).toString();
+
+   window.connect(firebaseRef, userId);
+   window.gazeSharing = true;
 
     //// Create Firepad (with rich text features and our desired userId).
     var firepad = Firepad.fromCodeMirror(firebaseRef, codeMirror, {
