--- a/eyewrite.html
+++ b/eyewrite.html
@@ -205,12 +205,10 @@
               margin-bottom: 10px;
               margin-top: 0px;
             ">
-          <!-- <option value="solid">Solid</option> -->
-          <option value="gradient">Gradient</option>
-          <option value="heatmap">Heatmap</option>
-          <option value="hollow">Hollow</option>
-
-
+            <option value="solid">Solid</option>
+            <option value="gradient">Gradient</option>
+            <option value="heatmap">Heatmap</option>
+            <option value="hollow">Hollow</option>
         </select>
       </div>
     </div>
