mouse pointer + overlap csv

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -285,6 +285,8 @@
       style='color:red;font-size:20px;font-weight: bold;' id=drawingPrompt></span></div>
   <div id='timeholder' style='position: relative;bottom:173%;left:50%;'>Time Left: <span id='timer'></span></div>
   <div id="heatmap"></div>
+  document.addEventListener('contextmenu', event => event.preventDefault());
+
 
 </body>
 
