--- a/eyewrite.html
+++ b/eyewrite.html
@@ -115,7 +115,6 @@
   top:330px;
   position: absolute;
   border-radius: 4px;
-  padding-bottom: 12px;
   height: 250px;
   max-height: 65vh;
   visibility: visible;">
@@ -123,7 +122,7 @@
     <div id='incorrectCounter' style='position: relative;left:12%'>Incorrect Clicks: <span id='badclicks'>0</span></div>
     <img id='targetSearch' src='' alt='TARGET' width='100px' height='100px'
       style='position:absolute;left:20%;bottom:35%'>
-    <button class="btn btn-primary" id="skipButton" onclick="voteSkipTarget()" style="position:absolute;bottom:5%;left:15%">Skip Target</button>
+    <button class="btn btn-primary" id="skipButton" onclick="voteSkipTarget()" style="position:absolute;bottom:20%;left:15%">Target Absent</button>
     <!-- <button class="btn btn-primary" id="skip1Button" onclick="nextTarget()" style="position:absolute;bottom:5%;left:15%">Skip Target</button> -->
 
   </div>
