--- a/generateTrails/generateTrails.html
+++ b/generateTrails/generateTrails.html
@@ -13,6 +13,11 @@
       padding: 2px;
       font-size: 16px;
     }
+    canvas {
+        margin: 0 auto;
+        display: block;
+      border: 1px solid black;
+    }
   </style>
 </head>
 <body>
