--- a/eyewrite.html
+++ b/eyewrite.html
@@ -121,11 +121,19 @@
     <div style='position: relative;left:18%'>Time: <span id='stopwatch'>00:00:00</span></div>
     <div id='incorrectCounter' style='position: relative;left:12%'>Incorrect Clicks: <span id='badclicks'>0</span></div>
     <img id='targetSearch' src='' alt='TARGET' width='100px' height='100px'
-      style='position:absolute;left:20%;bottom:35%'>
+      style='position:absolute;left:20%;bottom:35%;'>
     <button class="btn btn-primary" id="skipButton" onclick="nextTarget()" style="position:absolute;bottom:20%;left:15%">Target Absent</button>
     <!-- <button class="btn btn-primary" id="skip1Button" onclick="nextTarget()" style="position:absolute;bottom:5%;left:15%">Skip Target</button> -->
-
+    
   </div>
+
+  <p id='clickStatus' style='position:absolute;bottom:40%;left:0%;text-decoration: underline;'>Status</p>
+
+
+<!-- NOT USED BELOW -->
+<!-- NOT USED BELOW -->
+<!-- NOT USED BELOW -->
+
 
   <div id="controlContainer" style="visibility: hidden;">
     <div id="user-checkboxes-container"></div>
