--- a/eyewrite.html
+++ b/eyewrite.html
@@ -94,13 +94,13 @@
 <body onload="updateUI()">
     <!-- Tobii, bundled by browserify -->
   <script type="text/javascript" src="scripts/bundle.js"></script>
-  <div id="userlist"></div>
+  <div id="userlist" width="100px" style="position: absolute; top:0px; left:0px; background-color: skyblue;"></div>
 
   <div id="firepad" style='visibility:hidden'></div>
 
 
-  <div id='imageContainer' style='position:relative;background-color: grey;left:13%;height:100%'>
-    <img id='imageSearch' src='' alt="IMAGE" width='50%' height='100%' style='position:absolute;left:20%;'>
+  <div id='imageContainer' style='position:relative;background-color: skyblue;height:1300px;left:160px; width: 2300px;display: flex; align-items: center;border-radius: 25px;'>
+    <img id='imageSearch' src='' alt="IMAGE" width='2200px' height='1250px' style="object-fit: contain;"/>
   </div>
 
   <div id="heatmap"></div>
@@ -110,21 +110,26 @@
 
   <div id="colorpicker"></div>
 
-  <div id="imageSearchUI" style="background-color: #ebebeb;
-  width: 175px;
-  top:330px;
+  <div id="imageSearchUI" style="
+  background-color: skyblue;
+  width: 150px;
+  top:0px;
+  right: 0px;
   position: absolute;
   border-radius: 4px;
-  height: 250px;
-  max-height: 65vh;
-  visibility: visible;">
-    <div style='position: relative;left:18%'>Time: <span id='stopwatch'>00:00:00</span></div>
-    <div id='incorrectCounter' style='position: relative;left:12%'>Incorrect Clicks: <span id='badclicks'>0</span></div>
+  height: 100%;
+  visibility: visible;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  padding-top: 50px;">
+    <div style="font-weight: bold;" > Time: <span id='stopwatch'>00:00:00</span></div>
+    <div  style="font-weight: bold;">Incorrect Clicks: <span id='badclicks' style="color: red;">0</span></div>
     <img id='targetSearch' src='' alt='TARGET' width='100px' height='100px'
-      style='position:absolute;left:20%;bottom:35%;'>
-    <button class="btn btn-primary" id="skipButton" onclick="voteSkipTarget()" style="position:absolute;bottom:20%;left:15%">Target Absent</button>
-    <!-- <button class="btn btn-primary" id="skip1Button" onclick="nextTarget()" style="position:absolute;bottom:5%;left:15%">Skip Target</button> -->
-    
+      style='margin-top: 40px;'>
+    <button class="btn btn-primary" id="skipButton" onclick="voteSkipTarget()" >Target Absent</button>
+  
   </div>
 
   <p id='clickStatus' style='position:absolute;bottom:40%;left:0%;text-decoration: underline;'>Status</p>
