removed repititive clciks

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -132,7 +132,7 @@
   
   </div>
 
-  <p id='clickStatus' style='position:absolute;bottom:40%;left:0%;text-decoration: underline;'>Status</p>
+  <button id="shuffle" onclick="shuffleImages()" style="position: absolute; top:300px; background-color: #ffbf86;padding: 10px; font-size: 14px; visibility: hidden;">Shuffle</button>
 
 
 <!-- NOT USED BELOW -->
@@ -436,6 +436,8 @@
 </body>
 <script src="./scripts/downloadData.js"></script>
 <script src="./scripts/parseURLForVisAudParImgRad.js"></script>
+<script src="./scripts/preShuffle.js"></script>
+
 
 
 <!-- Highlight Style -->
