--- a/eyewrite.html
+++ b/eyewrite.html
@@ -94,12 +94,12 @@
 <body onload="updateUI()">
     <!-- Tobii, bundled by browserify -->
   <script type="text/javascript" src="scripts/bundle.js"></script>
-  <div id="userlist" width="100px" style="position: absolute; top:0px; left:0px; background-color: #ccd5ae;"></div>
+  <div id="userlist" width="100px" style="position: absolute; top:0px; left:0px; background-color: #dcdcdc;"></div>
 
   <div id="firepad" style='visibility:hidden'></div>
 
 
-  <div id='imageContainer' style='position:relative;background-color: #ccd5ae;;height:1300px;left:160px; width: 2300px;display: flex; align-items: center;border-radius: 25px;'>
+  <div id='imageContainer' style='position:relative;background-color: #dcdcdc;;height:1300px;left:160px; width: 2300px;display: flex; align-items: center;border-radius: 25px;'>
     <img id='imageSearch' src='' alt="IMAGE" width='2200px' height='1250px' style="border: 2px solid #58804f"/>
   </div>
 
@@ -111,7 +111,7 @@
   <div id="colorpicker"></div>
 
   <div id="imageSearchUI" style="
-  background-color: #ccd5ae;
+  background-color: #dcdcdc;
   width: 150px;
   top:0px;
   right: 0px;
