first start exp

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -137,12 +137,9 @@
     <option value="SG + SV">SG + SV</option>
   </select>
 
-  <button id="startButton" onclick="startExp(document.getElementById('condition').value)" 
+  <button id="startButton"
   style="position: absolute; top:450px; background-color: white;padding: 10px; font-size: 14px; right:10px" disabled>Start Experiment</button>
 
-  <button id="shuffle" onclick="shuffleImages()" 
-  style="position: absolute; top:400px; background-color: #ffbf86;padding: 10px; font-size: 14px;">
-  Shuffle</button>
   <!-- add visiblity: hidden to the div when doing experiemtn -->
 
 
