--- a/eyewrite.html
+++ b/eyewrite.html
@@ -100,7 +100,7 @@
 
 
   <div id='imageContainer' style='position:relative;background-color: #dcdcdc;;height:1300px;left:160px; width: 2300px;display: flex; align-items: center;border-radius: 25px;'>
-    <img id='imageSearch' src='' alt="IMAGE" width='2200px' height='1250px' style="border: 2px solid #58804f"/>
+    <img id='imageSearch' src='' alt="IMAGE" width='2200px' height='1250px' style="border: 2px solid #000000"/>
   </div>
 
   <div id="heatmap"></div>
@@ -126,7 +126,7 @@
   padding-top: 50px;">
     <div style="font-weight: bold;" > Time: <span id='stopwatch'>00:00:00</span></div>
     <div  style="font-weight: bold;">Incorrect Clicks: <span id='badclicks' style="color: red;">0</span></div>
-    <img id='targetSearch' src='generateTrials/images/O_image.png' alt='TARGET' width='100px' height='100px'
+    <img id='targetSearch' src='generateTrials/images/O_image.png' alt='TARGET' width='50px' height='50px'
       style='margin-top: 40px;'>
     <button class="btn btn-primary" id="skipButton" onclick="voteSkipTarget()" disabled>No Target</button>
   
