Refactor code for better performance and organization

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -126,6 +126,7 @@
   padding-top: 50px;">
     <div style="font-weight: bold;" > Time: <span id='stopwatch'>00:00:00</span></div>
     <div  style="font-weight: bold;">Incorrect Clicks: <span id='badclicks' style="color: red;">0</span></div>
+    <div style="font-weight: bold;">Trial: <span id='trialNumber'>0</span></div>
     <img id='targetSearch' src='generateTrials/images/O_image.png' alt='TARGET' width='50px' height='50px'
       style='margin-top: 40px;'>
     <button class="btn btn-primary" id="skipButton" onclick="voteSkipTarget()" disabled>No Target</button>
