--- a/eyewrite.html
+++ b/eyewrite.html
@@ -94,12 +94,12 @@
 <body onload="updateUI()">
     <!-- Tobii, bundled by browserify -->
   <script type="text/javascript" src="scripts/bundle.js"></script>
-  <div id="userlist" width="100px" style="position: absolute; top:0px; left:0px; background-color: #dcdcdc;"></div>
+  <div id="userlist" width="100px" style="position: absolute; top:0px; left:0px; background-color: white;"></div>
 
   <div id="firepad" style='visibility:hidden'></div>
 
 
-  <div id='imageContainer' style='position:relative;background-color: #dcdcdc;;height:1300px;left:160px; width: 2300px;display: flex; align-items: center;border-radius: 25px;'>
+  <div id='imageContainer' style='position:relative;background-color: white;;height:1300px;left:160px; width: 2300px;display: flex; align-items: center;border-radius: 25px;'>
     <img id='imageSearch' src='' alt="IMAGE" width='2200px' height='1250px' style="border: 2px solid #000000"/>
   </div>
 
@@ -111,7 +111,7 @@
   <div id="colorpicker"></div>
 
   <div id="imageSearchUI" style="
-  background-color: #dcdcdc;
+  background-color: white;
   width: 150px;
   top:0px;
   right: 0px;
@@ -126,13 +126,13 @@
   padding-top: 50px;">
     <div style="font-weight: bold;" > Time: <span id='stopwatch'>00:00:00</span></div>
     <div  style="font-weight: bold;">Incorrect Clicks: <span id='badclicks' style="color: red;">0</span></div>
-    <div style="font-weight: bold;">Trial: <span id='trialNumber'>0</span></div>
+    <div style="font-weight: bold;">Trial: <span id='trialNumber'>0</span>/48</div>
     <img id='targetSearch' src='generateTrials/images/O_image.png' alt='TARGET' width='50px' height='50px'
       style='margin-top: 40px;'>
     <button class="btn btn-primary" id="skipButton" onclick="voteSkipTarget()" disabled>No Target</button>
   
   </div>
-  <select id="condition" style="position: absolute; top: 400px; right:30px; background-color:lightgrey;padding: 10px; font-size: 14px; width:100px;">
+  <select id="condition" style="position: absolute; top: 400px; right:30px; background-color:white;padding: 10px; font-size: 14px; width:100px;">
     <option value="SG">SG</option>
     <option value="SV">SV</option>
     <option value="SG + SV">SG + SV</option>
