--- a/eyewrite.html
+++ b/eyewrite.html
@@ -137,9 +137,19 @@
     <option value="SV">SV</option>
     <option value="SG + SV">SG + SV</option>
   </select>
-
   <button id="startButton"
   style="position: absolute; top:450px; background-color: white;padding: 10px; font-size: 14px; right:10px" disabled>Start Experiment</button>
+
+
+  <select id="warmups" style="position: absolute; top: 500px; right:30px; background-color:white;padding: 10px; font-size: 14px; width:100px;">
+    <option value="SG">SG</option>
+    <option value="SV">SV</option>
+    <option value="SG + SV">SG + SV</option>
+  </select>
+  <button id="startWarmupButton"
+  style="position: absolute; top:550px; background-color: white;padding: 15px; font-size: 14px; right:10px" disabled>Start Warmup</button>
+
+
 
   <!-- add visiblity: hidden to the div when doing experiemtn -->
 
