--- a/eyewrite.html
+++ b/eyewrite.html
@@ -143,7 +143,7 @@
 
   <select id="warmups" style="position: absolute; top: 500px; right:45px; background-color:white;padding: 10px; font-size: 14px; width:100px;">
     <option value="SG">SG Warmup</option>
-    <option value="SV">SV Warmup/option>
+    <option value="SV">SV Warmup</option>
     <option value="SG + SV">SG + SV Warmup</option>
   </select>
   <button id="startWarmupButton"
