chore: Update path to socket.io-stream.js

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -88,7 +88,7 @@
 
   <!--Socket.io stuff-->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
-  <script type="text/javascript" src="/socket.io-stream.js"></script>
+  <script type="text/javascript" src="scripts/socket.io-stream.js"></script>
 </head>
 
 <body onload="updateUI()">
